ok, popup dialog on home page : src,training, survey

--- a/web.config
+++ b/web.config
@@ -15,6 +15,7 @@
         </defaultDocument>
         <staticContent>
             <mimeMap fileExtension=".json" mimeType="application/json" />
+            <mimeMap fileExtension=".woff" mimeType="application/octet-stream" />
         </staticContent>
     </system.webServer>
 </configuration>
